# uof-status-client-rust

./: Cargo.toml  LICENSE  README.md  build.sh
.github/workflows/: rust.yml  x86_64-pc-windows-gnu.yml  x86_64-pc-windows-msvc.yml  x86_64-unknown-linux-gnu.yml  x86_64-unknown-linux-musl.yml
src/: api.rs  arguments.rs  config.rs  main.rs
