[package]
name = "uof-status"
description = "A client of uof-status written in rust"
documentation = "https://github.com/University-Of-Fool/uof-status-client-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["UrsusFeline <ursusfeline07@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0"
env_logger = "0"
async-std = "1"
clap = { version = "4", features = ["derive"] }
